[tool.poetry]
name = "gce-ipx800-prometheus"
version = "0.0.0"
description = "wend endpoint exposing prometheus metrics for a GCE IPX800 device."
authors = ["Marc-Aurèle Brothier <m@brothier.org>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
urllib3 = "^2.2.3"
uvicorn = "^0.31.0"
gce-ipx800 = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
