[project]
name = "gce-ipx800-prometheus"
version = "0.0.0"
description = "Endpoint exposing prometheus metrics for a GCE IPX800 device"
readme = "README.md"
license = "Apache-2.0"
authors = ["Marc-Aurèle Brothier <m@brothier.org>"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "gce-ipx800>=0.8.0",
    "uvicorn>=0.34.0",
]
